--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -226,6 +226,30 @@
             background: #4338ca;
         }
 
+        .search-container {
+            flex-grow: 1;
+            margin: 0 20px;
+            max-width: 400px;
+        }
+
+        .search-input {
+            width: 100%;
+            padding: 10px 16px;
+            border-radius: 99px;
+            border: 1px solid rgba(148, 163, 184, 0.4);
+            background: rgba(15, 23, 42, 0.8);
+            color: #f5f5f5;
+            font-size: 0.9rem;
+            outline: none;
+            transition: all 0.2s;
+        }
+
+        .search-input:focus {
+            border-color: #4f46e5;
+            background: rgba(15, 23, 42, 0.95);
+            box-shadow: 0 0 0 2px rgba(79, 70, 229, 0.3);
+        }
+
         .hidden {
             display: none !important;
         }
@@ -257,6 +281,11 @@
     <div id="productPage">
         <div class="header">
             <h1>PerfStore Ürünleri</h1>
+
+            <div class="search-container">
+                <input type="text" class="search-input" placeholder="Ürün ara..." oninput="handleSearch(this.value)">
+            </div>
+
             <button onclick="logout()"
                 style="width: auto; padding: 8px 16px; margin: 0; background: #ef4444;">Çıkış</button>
         </div>
@@ -329,30 +358,43 @@
             }
         }
 
-        async function fetchProducts() {
+        let searchTimeout;
+        function handleSearch(query) {
+            clearTimeout(searchTimeout);
+            searchTimeout = setTimeout(() => {
+                fetchProducts(query);
+            }, 300); // 300ms debounce
+        }
+
+        async function fetchProducts(query = '') {
             const container = document.getElementById('productsContainer');
             try {
-                const res = await fetch(API_BASE + '/products');
+                let url = API_BASE + '/products';
+                if (query) {
+                    url += `?query=${encodeURIComponent(query)}`;
+                }
+
+                const res = await fetch(url);
                 if (!res.ok) throw new Error('Ürünler alınamadı');
 
                 const products = await res.json();
 
                 if (products.length === 0) {
-                    container.innerHTML = '<div style="grid-column: 1/-1; text-align:center; color:#94a3b8">Hemen ürün bulunamadı.</div>';
+                    container.innerHTML = '<div style="grid-column: 1/-1; text-align:center; color:#94a3b8">Ürün bulunamadı.</div>';
                     return;
                 }
 
                 container.innerHTML = products.map(product => `
-                <div class="product-card">
-                    <img src="${product.imageUrl}" alt="${product.name}" class="product-image" onerror="this.src='https://via.placeholder.com/300x200?text=No+Image'">
-                    <div class="product-info">
-                        <div class="product-title">${product.name}</div>
-                        <div class="product-desc">${product.description}</div>
-                        <div class="product-price">${formatCurrency(product.price)} TL</div>
-                        <button class="btn-buy" onclick="alert('Satın alma özelliği yakında!')">SATIN AL</button>
-                    </div>
+            <div class="product-card">
+                <img src="${product.imageUrl}" alt="${product.name}" class="product-image" onerror="this.src='https://via.placeholder.com/300x200?text=No+Image'">
+                <div class="product-info">
+                    <div class="product-title">${product.name}</div>
+                    <div class="product-desc">${product.description}</div>
+                    <div class="product-price">${formatCurrency(product.price)} TL</div>
+                    <button class="btn-buy" onclick="alert('Satın alma özelliği yakında!')">SATIN AL</button>
                 </div>
-            `).join('');
+            </div>
+        `).join('');
 
             } catch (error) {
                 console.error(error);
